<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.PrestasiActivity">

        <!-- Vector 1 -->
        <ImageView
            android:id="@+id/vector1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Tombol Back -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Teks Prestasi -->
        <TextView
            android:id="@+id/tv_fasilitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prestasi"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

        <ImageView
            android:id="@+id/vector2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="110dp"
            android:layout_marginStart="20dp"
            tools:layout_editor_absoluteY="91dp" />

        <ImageView
            android:id="@+id/img_prestasi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/vector1"
            android:layout_marginTop="200dp"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="175dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/img_prestasi1"
            app:layout_constraintTop_toTopOf="@id/vector1"
            android:layout_marginTop="200dp"
            android:layout_marginStart="170dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="125dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi2"
            app:layout_constraintStart_toStartOf="@id/tv_pres1"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_pres1"
            android:layout_marginTop="70dp"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres3"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="175dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/img_prestasi3"
            app:layout_constraintTop_toTopOf="@id/img_prestasi2"
            android:layout_marginTop="270dp"
            android:layout_marginStart="170dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres6"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="125dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi4"
            app:layout_constraintStart_toStartOf="@id/tv_pres3"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_pres3"
            android:layout_marginTop="70dp"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres3"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="175dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/img_prestasi5"
            app:layout_constraintTop_toTopOf="@id/tv_pres4"
            android:layout_marginTop="70dp"
            android:layout_marginStart="170dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres4"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="125dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi5"
            app:layout_constraintStart_toStartOf="@id/tv_pres1"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_pres5"
            android:layout_marginTop="70dp"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres7"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="175dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/img_prestasi7"
            app:layout_constraintTop_toTopOf="@id/tv_pres4"
            android:layout_marginTop="340dp"
            android:layout_marginStart="170dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres8"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="125dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi7"
            app:layout_constraintStart_toStartOf="@id/tv_pres7"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_pres7"
            android:layout_marginTop="70dp"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres9"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="175dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_prestasi10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pres10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/img_prestasi9"
            app:layout_constraintTop_toTopOf="@id/tv_pres6"
            android:layout_marginTop="340dp"
            android:layout_marginStart="170dp"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/tv_pres10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pres10"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="125dp"
            app:layout_constraintTop_toBottomOf="@id/img_prestasi9"
            app:layout_constraintStart_toStartOf="@id/tv_pres9"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imagehome"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:src="@drawable/home1"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_pres10"/>

        <TextView
            android:id="@+id/tv_juara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juara"
            android:textColor="@color/black"
            android:layout_marginTop="160dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagehome"/>

        <ImageView
            android:id="@+id/imagehome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imghome2"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_juara"/>

        <TextView
            android:id="@+id/tv_juara1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juara1"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagehome1"/>

        <ImageView
            android:id="@+id/imagehome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/imghome2"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_juara1"/>

        <TextView
            android:id="@+id/tv_juara2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/juara2"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:textSize="15sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagehome2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/tv_juara2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
