<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.profile.SejarahActivity">

        <!-- Background Header -->
        <ImageView
            android:id="@+id/vector1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/vector18"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Tombol Back -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Judul Halaman -->
        <TextView
            android:id="@+id/tv_sejarah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sejarah"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            android:layout_marginStart="12dp"/>

        <ImageView
            android:id="@+id/vector2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vector19"
            android:layout_marginTop="470dp"
            app:layout_constraintTop_toTopOf="@+id/tv_sejarah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Card 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_sejarah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Awal Berdiri (1972-1988)"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sejarah1"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Perubahan Menjadi Akper Wijayakusuma (1988)"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sejarah2"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Perubahan Penerimaan Mahasiswa (1996-1997)"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sejarah3"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. Perubahan Status Menjadi Politeknik (2001)"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sejarah4"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:paddingTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/vector3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/vector20"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="@id/card4" />

        <ImageView
            android:id="@+id/vector4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/vector21"
            android:layout_marginTop="250dp"
            app:layout_constraintTop_toTopOf="@id/card3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/card4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
